created all sections of the clone

--- a/index.html
+++ b/index.html
@@ -6,7 +6,46 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SlackClone</title>
 </head>
+
 <body>
+
+<!-- ======================== NAV BAR ====================================== -->
+  <nav>
+    <img src= "" alt="Slack Logo">
+    <button></button>
+  </nav>
+
+<!-- ======================== NAV BAR ====================================== -->
+
+<header>
+  <h1>Transforma tu forma de trabajar</h1>
+  <p>Cuando tu equipo tiene que echar a andar un proyecto, contratar un empleado, 
+    subir unas líneas de código, revisar un contrato de ventas, finalizar el 
+    presupuesto del próximo año, medir una prueba A/B, planificar la apertura de 
+    tu próxima oficina o cualquier otra situación, siempre puedes contar con Slack.</p>
+    <button>Primeros pasos</button>
+    <img src="#" alt="">
+</header>
+
+<!-- ======================== SECTION 1 ====================================== -->
+
+<section></section>
+
+<!-- ======================== SECTION 1 ====================================== -->
+
+<section></section>
+
+<!-- ======================== SECTION 1 ====================================== -->
+
+<section></section>
+
+<!-- ======================== SECTION 1 ====================================== -->
+
+<section></section>
+
+<!-- ======================== FOOTER ====================================== -->
+
+<footer></footer>
   
 </body>
 </html>
