added content to section 1. Assigned class features as well

--- a/index.html
+++ b/index.html
@@ -29,7 +29,43 @@
 
 <!-- ======================== SECTION 1 ====================================== -->
 
-<section></section>
+<section class="features">
+  <h2>El eje que reúne a tu equipo y guía tu trabajo</h2>
+  <div>
+    <img src="#" alt="">
+    <h4>Canales</h4>
+    <p>En Slack, los equipos se comunican a través de canales, 
+      que puedes organizar por proyectos, temas, departamentos o 
+      lo que tenga sentido para ti.</p>
+  </div>
+
+  <div>
+    <img src="#" alt="">
+    <h4>Búsqueda</h4>
+    <p>A través de la búsqueda, todo el mundo pueda acceder a las 
+      conversaciones en Slack, por lo que la información siempre 
+      está a un clic de distancia.</p>
+  </div>
+
+  <div>
+    <img src="#" alt="">
+    <h4>Integraciones</h4>
+    <p>Slack es compatible con las herramientas y los servicios que
+       usas a diario. Trae la información que necesitas o ejecuta 
+       tareas sin salir de Slack.</p>
+  </div>
+
+  <div>
+    <img src="#" alt="">
+    <h4>Seguridad</h4>
+    <p>En Slack nos tomamos en serio la seguridad. Ofrecemos medidas
+       como la autenticación de dos factores y el inicio de sesión 
+       único para garantizar la seguridad de tus datos y proteger tu organización.</p>
+  </div>
+
+  <a href="#">Más información sobre las funciones de Slack</a>
+
+</section>
 
 <!-- ======================== SECTION 1 ====================================== -->
 
