added content to section 2. Assigned class use-cases to entire section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <img src="#" alt="">
 </header>
 
-<!-- ======================== SECTION 1 ====================================== -->
+<!-- ======================== SECTION 1 -- FEATURES ====================================== -->
 
 <section class="features">
   <h2>El eje que reúne a tu equipo y guía tu trabajo</h2>
@@ -67,15 +67,31 @@
 
 </section>
 
-<!-- ======================== SECTION 1 ====================================== -->
+<!-- ======================== SECTION 2 ====================================== -->
+
+<section class="use-cases">
+  <div>
+    <h2>Para toda clase de equipos</h2>
+    <p>Slack puede ayudarte a colaborar mejor con tu equipo y sacar adelante 
+      tus proyectos independiente del puesto o departamento en el que trabajes.</p>
+  </div>
+
+  <div>
+    <button>Ventas</button>
+    <button>Marketing</button>
+    <button>Atención al cliente</button>
+    <button>Programación</button>
+    <button>Informatíca</button>
+    <button>Recursos humanos</button>
+  </div>
+
+</section>
+
+<!-- ======================== SECTION 3 ====================================== -->
 
 <section></section>
 
-<!-- ======================== SECTION 1 ====================================== -->
-
-<section></section>
-
-<!-- ======================== SECTION 1 ====================================== -->
+<!-- ======================== SECTION 4 ====================================== -->
 
 <section></section>
 
