added content to section 4 and 5. Assigned classes users and cta respectively

--- a/index.html
+++ b/index.html
@@ -87,15 +87,53 @@
 
 </section>
 
-<!-- ======================== SECTION 3 ====================================== -->
+<!-- ======================== SECTION 3 STORIES ====================================== -->
 
-<section></section>
+<section class="stories">
+  <div>
+    <h2>Estás en buena compañía</h2>
+    <p>Slack transforma la forma de trabajar de miles de personas en todo el mundo.</p>
+  </div>
+  <article>
+    <p>LVMH/Benefit Cosmetics</p>
+    <h3>Embeleciendo el mundo con un guiño y una sonrisa (y Slack).</h3>
+    <img src="#" alt="">
+    <a href="#">LEER HISTORIA</a>
+    <button>---</button>
+  </article>
 
-<!-- ======================== SECTION 4 ====================================== -->
+  <article>
+      <p>Away</p>
+      <h3>Comercializan la maleta ideal con Slack.</h3>
+      <img src="#" alt="">
+      <a href="#">LEER HISTORIA</a>
+      <button>---</button>
+    </article>
 
-<section></section>
+</section>
 
-<!-- ======================== FOOTER ====================================== -->
+<!-- ======================== SECTION 4 LOGOS ====================================== -->
+
+<section class="user-logos">
+
+  <h1>USER LOGOS SECTION HERE</h1>
+  <img src="#" alt="">
+  <img src="#" alt="">
+  <img src="#" alt="">
+  <img src="#" alt="">
+  <img src="#" alt="">
+
+</section>
+
+
+<!-- ======================== SECTION CALL TO ACTION =============================== -->
+
+<section class="cta">
+  <h2>Prueba Slack con tu equipo gratis</h2>
+  <button>PRIMEROS PASOS</button>
+</section>
+
+<!-- ======================== FOOTER ================================================ -->
 
 <footer></footer>
   
