initial commit on branch dev. All sections created, some classes added no css yet

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <!-- ======================== NAV BAR ====================================== -->
   <nav>
-    <img src= "" alt="Slack Logo">
-    <button></button>
+    <img src= "xmlns=http://www.w3.org/2000/svg" alt="Slack Logo">
+    <button>
+    </button>
   </nav>
 
 <!-- ======================== NAV BAR ====================================== -->
@@ -135,7 +136,65 @@
 
 <!-- ======================== FOOTER ================================================ -->
 
-<footer></footer>
+<footer>
+  <img src="#" alt="">
+  <div>
+    <div>
+      <h5>EMPRESA</h5>
+      <ul>
+        <li> <a href="#">Conócenos</a> </li>
+        <li> <a href="#">Empleos</a></li>
+        <li> <a href="#">Blog</a> </li>
+        <li> <a href="#">Directrices de la marca</a></li>
+      </ul>
+    </div>
+    <div>
+      <h5>PRODUCTO</h5>
+      <ul>
+        <li> <a href="#">¿Por qué Slack?</a> </li>
+        <li> <a href="#">Enterprise</a> </li>
+        <li> <a href="#">Casos de clientes</a> </li>
+        <li> <a href="#">Precios</a></li>
+        <li> <a href="#">Seguridad</a></li>
+      </ul>
+    </div>
+    <div>
+      <h5>RECURSOS</h5>
+      <ul>
+        <li> <a href="#">Descargar</a></li>
+        <li> <a href="#">Centro de ayuda</a></li>
+        <li> <a href="#">Guías</a></li>
+        <li> <a href="#">Socios</a></li>
+        <li> <a href="#">Eventos</a></li>
+        <li> <a href="#">Directorio de Aplicaciones</a></li>
+        <li> <a href="#">API</a></li>
+      </ul>
+    </div>
+    <div>
+        <h5>EXTRAS</h5>
+        <ul>
+          <li> <a href="#">Tienda de Slack</a></li>
+          <li> <a href="#">Slack en el trabajo</a></li>
+          <li> <a href="#">Fondos de Slack</a></li>
+        </ul>
+      </div> 
+  </div>
+  <div>
+    <ul>
+      <li>Estado</li>
+      <li>Privacidad y términos</li>
+      <li>Contáctanos</li>
+      <li><select name="language" id="language"> Español</select></li>
+    </ul>
+  </div>
+  <div class="social-media">
+    <img src="#" alt="">
+    <img src="#" alt="">
+    <img src="#" alt="">
+    <img src="#" alt="">
+  </div>
+</footer>
   
 </body>
 </html>
+
