--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>SlackClone</title>
 </head>
 
@@ -11,8 +12,11 @@
 
 <!-- ======================== NAV BAR ====================================== -->
   <nav>
-    <img src= "xmlns=http://www.w3.org/2000/svg" alt="Slack Logo">
-    <button>
+    <img src= "" alt="Slack Logo">
+    <button class="menu-icon">
+        <div></div>
+        <div></div>
+        <div></div>
     </button>
   </nav>
 
