added style reset link to html. added menu icon and slack icon to the nav bar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/path/to/reset-css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>SlackClone</title>
 </head>
@@ -12,7 +13,9 @@
 
 <!-- ======================== NAV BAR ====================================== -->
   <nav>
-    <img src= "" alt="Slack Logo">
+    <div class="slack-logo">
+      <img src= "img/slack-logo.png" alt="Slack Logo">
+    </div>
     <button class="menu-icon">
         <div></div>
         <div></div>
@@ -20,7 +23,7 @@
     </button>
   </nav>
 
-<!-- ======================== NAV BAR ====================================== -->
+<!-- ======================== HEADER ====================================== -->
 
 <header>
   <h1>Transforma tu forma de trabajar</h1>
