floated nav elements, created container class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/path/to/reset-css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>SlackClone</title>
 </head>
@@ -14,12 +13,10 @@
 <!-- ======================== NAV BAR ====================================== -->
   <nav>
     <div class="slack-logo">
-      <img src= "img/slack-logo.png" alt="Slack Logo">
+      <img src= "img/slack-logo.png" alt="slack-logo">
     </div>
     <button class="menu-icon">
-        <div></div>
-        <div></div>
-        <div></div>
+        <img src="img/menu-logo.png" alt="menu-logo">
     </button>
   </nav>
 
