added container class to all sections that require it. set nav margin top to 8%

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- ======================== NAV BAR ====================================== -->
-  <nav>
+  <nav class="container">
     <div class="slack-logo">
       <img src= "img/slack-logo.png" alt="slack-logo">
     </div>
@@ -22,7 +22,7 @@
 
 <!-- ======================== HEADER ====================================== -->
 
-<header>
+<header class="container">
   <h1>Transforma tu forma de trabajar</h1>
   <p>Cuando tu equipo tiene que echar a andar un proyecto, contratar un empleado, 
     subir unas líneas de código, revisar un contrato de ventas, finalizar el 
@@ -34,7 +34,7 @@
 
 <!-- ======================== SECTION 1 -- FEATURES ====================================== -->
 
-<section class="features">
+<section class="features container">
   <h2>El eje que reúne a tu equipo y guía tu trabajo</h2>
   <div>
     <img src="#" alt="">
@@ -74,7 +74,7 @@
 
 <!-- ======================== SECTION 2 ====================================== -->
 
-<section class="use-cases">
+<section class="use-cases container">
   <div>
     <h2>Para toda clase de equipos</h2>
     <p>Slack puede ayudarte a colaborar mejor con tu equipo y sacar adelante 
@@ -94,7 +94,7 @@
 
 <!-- ======================== SECTION 3 STORIES ====================================== -->
 
-<section class="stories">
+<section class="stories container">
   <div>
     <h2>Estás en buena compañía</h2>
     <p>Slack transforma la forma de trabajar de miles de personas en todo el mundo.</p>
@@ -119,7 +119,7 @@
 
 <!-- ======================== SECTION 4 LOGOS ====================================== -->
 
-<section class="user-logos">
+<section class="user-logos container">
 
   <h1>USER LOGOS SECTION HERE</h1>
   <img src="#" alt="">
@@ -140,7 +140,7 @@
 
 <!-- ======================== FOOTER ================================================ -->
 
-<footer>
+<footer class="container">
   <img src="#" alt="">
   <div>
     <div>
