finished button on header section, missing propper centering. Added header image as well

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     subir unas líneas de código, revisar un contrato de ventas, finalizar el 
     presupuesto del próximo año, medir una prueba A/B, planificar la apertura de 
     tu próxima oficina o cualquier otra situación, siempre puedes contar con Slack.</p>
-    <button>Primeros pasos</button>
-    <img src="#" alt="">
+  <div class="download-button">
+    <button>CONSIGUE SLACK PARA ANDROID</button>
+  </div> 
+  <img class="home-img" src="img/Slack-home.png" alt="">
 </header>
 
 <!-- ======================== SECTION 1 -- FEATURES ====================================== -->
