--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="download-button">
     <button>CONSIGUE SLACK PARA ANDROID</button>
   </div> 
-  <img class="home-img" src="img/Slack-home.png" alt="">
+  <img class="home-img" src="https://a.slack-edge.com/43f70/marketing/img/home/home_illo.es-ES.png" alt="">
 </header>
 
 <!-- ======================== SECTION 1 -- FEATURES ====================================== -->
@@ -39,7 +39,7 @@
 <section class="features container">
   <h2>El eje que reúne a tu equipo y guía tu trabajo</h2>
   <div>
-    <img src="#" alt="">
+    <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/organized-convos.png" alt="">
     <h4>Canales</h4>
     <p>En Slack, los equipos se comunican a través de canales, 
       que puedes organizar por proyectos, temas, departamentos o 
@@ -47,7 +47,7 @@
   </div>
 
   <div>
-    <img src="#" alt="">
+    <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/search-binoculars.png" alt="">
     <h4>Búsqueda</h4>
     <p>A través de la búsqueda, todo el mundo pueda acceder a las 
       conversaciones en Slack, por lo que la información siempre 
@@ -55,7 +55,7 @@
   </div>
 
   <div>
-    <img src="#" alt="">
+    <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/apps-gears.png" alt="">
     <h4>Integraciones</h4>
     <p>Slack es compatible con las herramientas y los servicios que
        usas a diario. Trae la información que necesitas o ejecuta 
@@ -63,7 +63,7 @@
   </div>
 
   <div>
-    <img src="#" alt="">
+    <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/security-lock.png" alt="">
     <h4>Seguridad</h4>
     <p>En Slack nos tomamos en serio la seguridad. Ofrecemos medidas
        como la autenticación de dos factores y el inicio de sesión 
