adjusted colors for all titles, inserted and adjusted images for the stories section, tried creating box shadow without success

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="cases-links container">
     
     <div>
-      <button>Ventas <img src="img/right-arrow.png" alt="ventas"></button>
+      <button> Ventas <img src="img/right-arrow.png" alt="ventas"></button>
     </div>
     
     <div>
@@ -123,7 +123,7 @@
   <article>
     <p>LVMH/Benefit Cosmetics</p>
     <h3>Embeleciendo el mundo con un guiño y una sonrisa (y Slack).</h3>
-    <img src="#" alt="">
+    <img src="https://a.slack-edge.com/d5ae6e/marketing/img/customers/benefit/card_benefit.jpg" alt="Benefit Cosmetics">
     <a href="#">LEER HISTORIA</a>
     <button>---</button>
   </article>
@@ -131,7 +131,7 @@
   <article>
       <p>Away</p>
       <h3>Comercializan la maleta ideal con Slack.</h3>
-      <img src="#" alt="">
+      <img src="https://a.slack-edge.com/d5ae6e/marketing/img/customers/away/card_away.jpg" alt="Away">
       <a href="#">LEER HISTORIA</a>
       <button>---</button>
     </article>
