added menu icons to the article section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <h3>Embeleciendo el mundo con un guiño y una sonrisa (y Slack).</h3>
     <img src="https://a.slack-edge.com/d5ae6e/marketing/img/customers/benefit/card_benefit.jpg" alt="Benefit Cosmetics">
     <a href="#">LEER HISTORIA</a>
-    <button>---</button>
+    <button class="stories-menu"><img src="img/menu-logo.png" alt="menu-logo"></button>
   </article>
 
   <article>
@@ -133,7 +133,7 @@
       <h3>Comercializan la maleta ideal con Slack.</h3>
       <img src="https://a.slack-edge.com/d5ae6e/marketing/img/customers/away/card_away.jpg" alt="Away">
       <a href="#">LEER HISTORIA</a>
-      <button>---</button>
+      <button class="stories-menu"><img src="img/menu-logo.png" alt="menu-logo"></button>
     </article>
 
 </section>
