added footer-links class to footer ul. change list style and color to footer links

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <div>
     <div>
       <h5>EMPRESA</h5>
-      <ul>
+      <ul class="footer-links">
         <li> <a href="#">Conócenos</a> </li>
         <li> <a href="#">Empleos</a></li>
         <li> <a href="#">Blog</a> </li>
@@ -175,7 +175,7 @@
     </div>
     <div>
       <h5>PRODUCTO</h5>
-      <ul>
+      <ul class="footer-links">
         <li> <a href="#">¿Por qué Slack?</a> </li>
         <li> <a href="#">Enterprise</a> </li>
         <li> <a href="#">Casos de clientes</a> </li>
@@ -185,7 +185,7 @@
     </div>
     <div>
       <h5>RECURSOS</h5>
-      <ul>
+      <ul class="footer-links">
         <li> <a href="#">Descargar</a></li>
         <li> <a href="#">Centro de ayuda</a></li>
         <li> <a href="#">Guías</a></li>
