added classes to cta sections button and h2. Added image, set as background using position absolute. set styles to button and texts

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 <!-- ======================== SECTION CALL TO ACTION =============================== -->
 
 <section class="cta">
-  <h2>Prueba Slack con tu equipo gratis</h2>
+  <div><img src="img/CTA_Background.png" alt="background"></div>
+  <h2>Prueba Slack con tu <br>equipo gratis</h2>
   <button>PRIMEROS PASOS</button>
 </section>
 
