commit before mergin to master

--- a/index.html
+++ b/index.html
@@ -141,13 +141,16 @@
 <!-- ======================== SECTION 4 LOGOS ====================================== -->
 
 <section class="user-logos container">
-
-  <h1>USER LOGOS SECTION HERE</h1>
-  <img src="#" alt="">
-  <img src="#" alt="">
-  <img src="#" alt="">
-  <img src="#" alt="">
-  <img src="#" alt="">
+  <div>
+  <div class="logo-leftt"><img src="img/ticketmaster.png" alt=""></div>
+  <div class="logo-right"><img src="img/airbnb-alt.png" alt=""></div>
+  </div>
+  <div class="clear">
+  <div class="logo-left"><img src="img/target-alt.png" alt=""></div>
+  <div class="logo-right"><img src="img/capital_one.png" alt=""></div>
+  </div>
+  <div class="oracle"><img src="img/oracle.png" alt=""></div>
+  
 
 </section>
 
@@ -163,7 +166,7 @@
 <!-- ======================== FOOTER ================================================ -->
 
 <footer class="container">
-  <img src="#" alt="">
+  <img class="simple-logo" src="img/slack_simple_logo.png" alt="simple-logo">
   <div>
     <div>
       <h5>EMPRESA</h5>
@@ -198,26 +201,28 @@
     </div>
     <div>
         <h5>EXTRAS</h5>
-        <ul>
+        <ul class="footer-links">
           <li> <a href="#">Tienda de Slack</a></li>
           <li> <a href="#">Slack en el trabajo</a></li>
           <li> <a href="#">Fondos de Slack</a></li>
         </ul>
       </div> 
   </div>
-  <div>
-    <ul>
-      <li>Estado</li>
-      <li>Privacidad y términos</li>
-      <li>Contáctanos</li>
-      <li><select name="language" id="language"> Español</select></li>
+
+<!-- =============== FOOTER SECTION 2 ===============-->
+  <div class="footer-section-2">
+    <ul class="regulations">
+      <li><a href="#">Estado</a></li>
+      <li><a href="#">Privacidad y términos</a></li>
+      <li><a href="#">Contáctanos</a></li>
+      <li> <a href=""> Español </a></li>
     </ul>
   </div>
-  <div class="social-media">
-    <img src="#" alt="">
-    <img src="#" alt="">
-    <img src="#" alt="">
-    <img src="#" alt="">
+  <div class="social-media footer-section-2">
+      <img src="#" alt="">
+      <img src="#" alt="">
+      <img src="#" alt="">
+      <img src="#" alt="">
   </div>
 </footer>
   
