took container class off nav bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- ======================== NAV BAR ====================================== -->
-  <nav class="container">
+  <nav>
     <div class="slack-logo">
       <img src= "img/slack-logo.png" alt="slack-logo">
     </div>
