--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>SlackClone</title>
 </head>
 
@@ -39,38 +40,40 @@
 
 <section class="features container">
   <h2>El eje que reúne a tu equipo y guía tu trabajo</h2>
-  <div>
-    <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/organized-convos.png" alt="">
-    <h4>Canales</h4>
-    <p>En Slack, los equipos se comunican a través de canales, 
-      que puedes organizar por proyectos, temas, departamentos o 
-      lo que tenga sentido para ti.</p>
-  </div>
+  
+  <div class="features-articles">
+    <div class="article-left">
+      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/organized-convos.png" alt="">
+      <h4>Canales</h4>
+      <p>En Slack, los equipos se comunican a través de canales, 
+        que puedes organizar por proyectos, temas, departamentos o 
+        lo que tenga sentido para ti.</p>
+    </div>
 
-  <div>
-    <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/search-binoculars.png" alt="">
-    <h4>Búsqueda</h4>
-    <p>A través de la búsqueda, todo el mundo pueda acceder a las 
-      conversaciones en Slack, por lo que la información siempre 
-      está a un clic de distancia.</p>
-  </div>
+    <div>
+      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/search-binoculars.png" alt="">
+      <h4>Búsqueda</h4>
+      <p>A través de la búsqueda, todo el mundo pueda acceder a las 
+        conversaciones en Slack, por lo que la información siempre 
+        está a un clic de distancia.</p>
+    </div>
 
-  <div>
-    <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/apps-gears.png" alt="">
-    <h4>Integraciones</h4>
-    <p>Slack es compatible con las herramientas y los servicios que
-       usas a diario. Trae la información que necesitas o ejecuta 
-       tareas sin salir de Slack.</p>
-  </div>
+    <div class="article-left">
+      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/apps-gears.png" alt="">
+      <h4>Integraciones</h4>
+      <p>Slack es compatible con las herramientas y los servicios que
+         usas a diario. Trae la información que necesitas o ejecuta 
+         tareas sin salir de Slack.</p>
+    </div>
 
-  <div>
-    <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/security-lock.png" alt="">
-    <h4>Seguridad</h4>
-    <p>En Slack nos tomamos en serio la seguridad. Ofrecemos medidas
-       como la autenticación de dos factores y el inicio de sesión 
-       único para garantizar la seguridad de tus datos y proteger tu organización.</p>
+    <div>
+      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/security-lock.png" alt="">
+      <h4>Seguridad</h4>
+      <p>En Slack nos tomamos en serio la seguridad. Ofrecemos medidas
+         como la autenticación de dos factores y el inicio de sesión 
+         único para garantizar la seguridad de tus datos y proteger tu organización.</p>
+    </div>
   </div>
-
   <a class="link-mas-info" href="#">Más información sobre las funciones de Slack </a>
 
 </section>
